--- a/force-app/main/default/lwc/employeeTile/employeeTile.css
+++ b/force-app/main/default/lwc/employeeTile/employeeTile.css
@@ -14,6 +14,11 @@ h1{
     margin-bottom: small;
     float: left;
 }
+.icon{
+    height: 190px;
+    width: 150px;
+    opacity: 5%;
+}
 
 .details{
     position: relative;
@@ -21,20 +26,23 @@ h1{
 
 .fixTableHead { 
     overflow-y: auto; 
-  } 
-  .fixTableHead thead th { 
+} 
+
+.fixTableHead thead th { 
     position:absolute; 
-    top: 0; 
-  } 
-  table { 
+}
+
+table { 
     border-collapse: collapse;         
-    width: 100%; 
-  } 
-  th, 
-  td { 
-    padding: 8px 15px; 
-    border: 1px solid #939393; 
-  } 
-  th { 
+}
+
+th, 
+td { 
+    padding: 8px 10px; 
+    border: none; 
+}
+
+th { 
     background: #c3d6e8; 
-  } 
+    width: 100px;
+} 
